# armasa-path-tracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controls/: user_controller.cpp  user_controller.hpp
events/: mouse_events.cpp  mouse_events.hpp
examples/: example_view.cpp  example_view.hpp
examples/cornell_box/: cornell_box_example_view.cpp  cornell_box_example_view.hpp
examples/cornell_box_sphere/: cornell_box_sphere_example_view.cpp  cornell_box_sphere_example_view.hpp
examples/playground/: playground_view.cpp  playground_view.hpp
examples/random_spheres/: random_spheres_example_view.cpp  random_spheres_example_view.hpp
examples/tank/: tank_example_view.cpp  tank_example_view.hpp
graphics/: camera.cpp  camera.hpp  drawing_context.cpp  drawing_context.hpp  error_handling.cpp  error_handling.hpp  gl_buffer.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  vertex_array_object_factory.cpp  vertex_array_object_factory.hpp  window.cpp  window.hpp
graphics/gl/: gl_buffer.cpp  gl_buffer.hpp  gl_enums.cpp  gl_enums.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_texture.cpp  gl_texture.hpp  gl_texture_buffer.cpp  gl_texture_buffer.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  uniform.cpp  uniform.hpp  vertex_fragment_program.cpp  vertex_fragment_program.hpp
graphics/programs/: accumulator_program.cpp  accumulator_program.hpp  bounded_program.cpp  bounded_program.hpp  path_tracer_compute_program.cpp  path_tracer_compute_program.hpp  path_tracer_program.cpp  path_tracer_program.hpp  present_program.cpp  present_program.hpp  texture_program.cpp  texture_program.hpp  triangle_program.cpp  triangle_program.hpp
graphics/programs/camera_uniform_controller/: camera_uniform_controller.cpp  camera_uniform_controller.hpp
resources/shaders/accumulator/: fragment.shader
resources/shaders/path_tracing/: fragment.shader  vertex.shader
resources/shaders/post_process/: fragment.shader  vertex.shader
resources/shaders/present/: fragment.shader
resources/shaders/texture/: fragment.shader  vertex.shader
resources/shaders/triangle/: fragment.shader  vertex.shader
scene/: aabb.cpp  aabb.hpp  buffer_chunk.cpp  buffer_chunk.hpp  build_cube.cpp  build_cube.hpp  build_model.cpp  build_model.hpp  build_rect.cpp  build_rect.hpp  cornell_box_scene.cpp  cornell_box_scene.hpp  scene.cpp  scene.hpp  scene_buffer.cpp  scene_buffer.hpp  scene_buffer_serializable.cpp  scene_buffer_serializable.hpp  scene_drawer.cpp  scene_drawer.hpp  scene_renderer.cpp  scene_renderer.hpp
scene/hittables/: bvh_node.cpp  bvh_node.hpp  hittable.cpp  hittable.hpp  hittable_list.cpp  hittable_list.hpp  hittable_sphere.cpp  hittable_sphere.hpp  hittable_triangle.cpp  hittable_triangle.hpp
scene/hittables/bvh/: bvh_node.cpp  bvh_node.hpp  bvh_tree.cpp  bvh_tree.hpp
scene/materials/: material.cpp  material.hpp  material_dielectric.cpp  material_dielectric.hpp  material_lambertian.cpp  material_lambertian.hpp  material_lambertian_light.cpp  material_lambertian_light.hpp  material_metal.cpp  material_metal.hpp
shaders/accumulator/: fragment.shader  vertex.shader
shaders/path_tracing/: fragment.shader  vertex.shader
shaders/path_tracing/intersections/: aabb_intersection.shader  bvh_intersection.shader  intersections.shader  list_intersection.shader  sphere_intersection.shader  triangle_intersection.shader
shaders/path_tracing/materials/: dielectric.shader  lambertian.shader  light.shader  materials.shader  metal.shader
shaders/path_tracing/structures/: hit_record.shader
shaders/post_process/: fragment.shader  vertex.shader
shaders/texture/: fragment.shader  vertex.shader
shaders/utils/: constants.shader  random.shader
ui/: ui_button.cpp  ui_button.hpp  ui_slider.cpp  ui_slider.hpp  ui_text.cpp  ui_text.hpp  ui_view.cpp  ui_view.hpp
utils/: frame_timer.cpp  frame_timer.hpp  matrix3.hpp  matrix4.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
